# curator-pommeline

./: .env.example  .gitignore  README.md  WORKING.md  __init__.py  pyproject.toml  start_chatbot.sh
api/: main.py  models.py
api/routes/: chat.py  guardrail.py  inference.py  ingest.py
data/legacy/: airpods_pro_2.md  iphone_16_pro.md  macbook_air_m3.md
data/models/: bm25_44344f0d.pkl  guardrail_svc_classifier.joblib  guardrail_tfidf_vectorizer.joblib
data/products/: compare_mac_models_clean.md  iphone16_specs.md  iphone16e.md  iphone16e_clean.md  iphone17.md  iphone_17_pro.md  iphone_air.md  macbook_air.md  macbook_air_compare.md  macbook_air_specs.md  macbook_air_switch.md  macbook_pro_clean.md  macbook_pro_comparison.md  macbook_pro_overview.md  macbook_pro_switch_clean.md  macbook_pro_tech_specs.md  macbook_pro_tech_specs_clean.md  switch_from_pc_to_mac.md
frontend/: README.md  chatbot.js  index.html  styles.css
notebooks/: 01_document_ingestion_demo.ipynb  01_document_ingestion_demo_unified.ipynb  02_guardrail_classifier.ipynb  03_chat_with_tools_session.ipynb  04_end_to_end_demo.ipynb
notebooks/prompts/: guardrail_classifier.json  planner_prompt.txt  system_instructions.txt
prompts/: response_generator.txt  system_instructions.txt
src/: config.py
src/generator/: response_generator.py
src/guardrails/: classifier.py  link_masker.py
src/ingestion/: chunker.py  dual_index_ingestion.py  embedder.py  pinecone_index_client.py  unified_index_ingestion.py  vector_store.py
src/retrieval/: cache.py  (+2 more)
utils/: llm_pipeline.py  logger.py  model_configs.py
(+35 files in other folders)
